--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
 <body>
 <style>
     body {background-color: black}
-    h1, h2, p {font-family:Helvetica}
+    p {font-family:Helvetica}
     p {font-size: 16px}
     p {color: white}
     
 </style>
-  <center><button onclick="typeWriter()">this is a button</button></center>
-
-<p id="demo" "color:white">></p>
-
-<script>
-var i = 0;
-var txt = 'and this is a sentence...';
-var speed = 50;
-
-function typeWriter() {
-  if (i < txt.length) {
-    document.getElementById("demo").innerHTML += txt.charAt(i);
-    i++;
-    setTimeout(typeWriter, speed);
-  }
-}
-</script>
+<p><a href="inesreisx.github.io/osmosis/1>1</a></p>
 
 </body>
 </html>
