--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     p {color: white}
     
 </style>
-<p><a href="inesreisx.github.io/osmosis/1>1</a></p>
+<p><a href="https://inesreisx.github.io/videogames/1>1</a></p>
 
 </body>
 </html>
