--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
 <body>
 <style>
-    body {background-color: black}
+  body {background-color: black}
     p {font-family:Helvetica}
     p {font-size: 16px}
-    p {color: white}
+    p {color: white} 
     
 </style>
-<p><a href="https://inesreisx.github.io/videogames/1>1</a></p>
-
+  <section>
+  <p>games</p>
+  <p><a href="https://inesreisx.github.io/videogames/1">#1</a></p>
+  </section>
+  
 </body>
 </html>
