--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
   <section>
   <p>games</p>
-  <p><a href="https://inesreisx.github.io/videogames/1">#1</a></p>
+  <p><a href="https://inesreisx.github.io/osmosis/videogames/1.html">#1</a></p>
   </section>
   
 </body>
